@@ -1,6 +1,7 @@
 Release 1.3
 
 #7 Allow TreeConstraints to be applied to insert/update requests 
+#17 Support "group" as an object
 #18 CreateOrUpdateBuilder
 #19 Backend support for batch updates of a single entity
 #20 IEncoderService to return Encoder instead of DataResponse
